--- a/main.css
+++ b/main.css
@@ -60,6 +60,11 @@ header > .soc {
     text-align: center;
     grid-row: 5 / 6;
 }
+.testimonials > .top {
+    display: inline-block;
+    grid-column: 1 / 5;
+    padding-top: 30px;
+}
 .testimonials > .left {
     display: inline-block;
     grid-column: 2 / 3;
@@ -92,6 +97,11 @@ header > .soc {
     grid-row: 7 / 8;
     background-color: lightpink;
     text-align: center;
+}
+.services > .top {
+    display: inline-block;
+    grid-column: 1 / 7;
+    padding-top: 30px;
 }
 .services .left-column {
     display: inline-block;
