--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 
 .container {
+    width: 100%;
     display: grid;
     grid-template-columns: 480px 480px 480px 5px 475px;
     grid-template-rows: 40px 5px 297px 5px 245px 5px 245px 5px 45px 5px 40px;     
 }
 header {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 188px 188px 188px 188px 188px 188px 188px 188px 188px 188px 1fr;
     grid-template-rows: 5px 30px 5px;
@@ -24,6 +26,7 @@ header > img {
 }
 header > nav {
     display: inline-block;
+    width: 100%;
     text-align: center;
     padding-top: 5px;
     grid-column: 5 / 8;
@@ -33,6 +36,7 @@ header > nav {
 }
 header > .soc {
     display: inline-block;
+    width: 100%;
     text-align: center;
     padding-top: 5px;
     grid-column: 10 / 12;
@@ -43,6 +47,7 @@ header > .soc {
 
 .hero {
     display: inline-block;
+    width: 100%;
     grid-column:  1 / 6;
     background-color: aliceblue;
     text-align: center;
@@ -52,6 +57,7 @@ header > .soc {
 }
 .testimonials {
     display: grid;
+    width: 100%;
     grid-template-columns: 5px 712px 5px 712px 5px;
     grid-template-rows: 80px 160px 5px;
     width: 100%;
@@ -62,11 +68,13 @@ header > .soc {
 }
 .testimonials > .top {
     display: inline-block;
+    width: 100%;
     grid-column: 1 / 5;
     padding-top: 30px;
 }
 .testimonials > .left {
     display: inline-block;
+    width: 100%;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-color:darkgray;
@@ -74,6 +82,7 @@ header > .soc {
 }
 .testimonials > .right {
     display: inline-block;
+    width: 100%;
     grid-column: 4 / 5;
     grid-row: 2 / 3;
     background-color: darkgray;
@@ -90,6 +99,7 @@ header > .soc {
 }
 .services {
     display: grid;
+    width: 100%;
     grid-template-columns: 5px 473px 5px 473px 5px 473px 5px;
     grid-template-rows: 80px 160px 5px;
     width: 100%;
@@ -100,11 +110,13 @@ header > .soc {
 }
 .services > .top {
     display: inline-block;
+    width: 100%;
     grid-column: 1 / 7;
     padding-top: 30px;
 }
 .services .left-column {
     display: inline-block;
+    width: 100%;
     background-color: darkgray;
     padding-top: 50px;
     grid-column: 2 / 3;
@@ -112,6 +124,7 @@ header > .soc {
 }
 .services .right-column {
     display: inline-block;
+    width: 100%;
     background-color: darkgray;
     padding-top: 50px;
     grid-column: 6 / 7;
@@ -119,6 +132,7 @@ header > .soc {
 }
 .services .center-column {
     display: inline-block;
+    width: 100%;
     background-color: darkgray;
     padding-top: 50px;
     grid-column: 4 / 5;
@@ -141,4 +155,57 @@ footer {
     background-color: lightyellow;
     text-align: center;
     padding-top: 10px;
+}
+
+@media (max-width: 990px) {
+    .container {
+        margin: 0;
+        grid-template-columns: 330px 330px 330px;
+        grid-template-rows: 40px 5px 297px 5px 245px 5px 245px 5px 45px 5px 40px;     
+    }
+    nav, .ads, .services > .center-column{
+        visibility: hidden;
+    }
+    .services {
+        grid-row: 5 / 6;
+    }
+    .services > .right-column {
+        grid-column: 4 / 5;
+    }
+    .testimonials {
+        grid-row: 7 / 8;
+        width: 100%;
+        grid-template-columns: 5px 487px 5px 487px 5px;
+
+    }
+    header {
+        grid-template-columns: 1fr 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 1fr;
+        grid-template-rows: 5px 30px 5px;
+        grid-column: 1 / 6;  
+    
+    }
+    header > img {
+        
+        width: 30px;
+        grid-column: 2 / 3;
+        
+        margin-right: 94px;
+       
+    }
+    header > nav {
+       
+        grid-column: 5 / 8;
+        grid-column: 10 / 12;
+        
+    }
+    
+    .hero {
+       
+        grid-column:  1 / 6;
+        background-color: aliceblue;
+        text-align: center;
+        padding-top: 153px;
+        padding-bottom: 153px;
+        grid-row: 3 / 4;
+    }
 }
