--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 .container {
     width: 100%;
     display: grid;
@@ -19,12 +18,11 @@
 header {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 188px 188px 188px 188px 188px 188px 188px 188px 188px 188px 1fr;
+    grid-template-columns: 5px 188px 188px 188px 188px 188px 188px 188px 188px 188px 188px 5px;
     grid-template-rows: 5px 30px 5px;
     grid-column: 1 / 6;
     grid-row: 1 / 2;
     background-color: violet;
-
 }
 header > img {
     display: inline-block;
